--- a/css/style.css
+++ b/css/style.css
@@ -52,9 +52,9 @@ body {
 }
 
 h1 {
-  font-size: 3rem;
+  font-size: 6.02rem;
   font-family: 'Bricolage Grotesque';
-  color: var(--text-secondary);
+  color: var(--text-dark);
 }
 
 h2 {
@@ -69,7 +69,6 @@ p {
 
 a {
   color: var(--link);
-  text-decoration: none;
   transition: color 0.3s ease;
 }
 
@@ -194,6 +193,16 @@ a img:hover {
   text-align: center;
 }
 
+.hero {
+  width: 100%;
+  padding: 200px 24px 4px 24px;
+  background-image: linear-gradient(rgba(255, 255, 255, 0.3),
+      rgba(255, 255, 255, 1)), url('../images/hero.png');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
 .title {
   margin-bottom: 1rem;
 }
@@ -216,4 +225,47 @@ a img:hover {
 
 .team-member p {
   margin-bottom: 4px;
+}
+
+
+.sections {
+  display: flex;
+  flex-direction: column;
+  border-bottom: 1px solid var(--hr-color);
+  margin: 64px 0px;
+}
+
+details {
+  border-top: 1px solid var(--hr-color);
+  padding: 16px 0;
+  overflow: hidden;
+}
+
+summary {
+  font-family: 'Bricolage Grotesque';
+  color: var(--text-dark);
+  font-weight: bold;
+  font-size: 1.5rem;
+  cursor: pointer;
+  list-style: none;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+summary::-webkit-details-marker {
+  display: none;
+}
+
+summary::after {
+  width: 2rem;
+  text-align: center;
+  content: '↓';
+  display: inline-block;
+  transition: transform 0.3s ease;
+  font-weight: 100;
+}
+
+details[open] summary::after {
+  transform: rotate(-180deg);
 }
