--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,14 @@
   font-display: swap;
 }
 
+@font-face {
+  font-family: 'ET Book Roman Old Style';
+  src: url('../fonts/et-book.woff') format('woff');
+  font-weight: 100 900;
+  font-style: normal;
+  font-display: swap;
+}
+
 :root {
   font-family: 'Inter';
   --text-primary: #2a2d21;
@@ -46,13 +54,13 @@ body {
 
 h1 {
   font-size: 6.02rem;
-  font-family: 'Bricolage Grotesque';
+  font-family: 'ET Book Roman Old Style';
   font-weight: 500;
   color: #a5bf54;
 }
 
 h2 {
-  font-family: 'Bricolage Grotesque';
+  font-family: 'ET Book Roman Old Style';
   color: var(--text-dark);
   font-weight: bold;
 }
@@ -244,7 +252,7 @@ details {
 }
 
 summary {
-  font-family: 'Bricolage Grotesque';
+  font-family: 'ET Book Roman Old Style';
   color: var(--text-dark);
   font-weight: bold;
   font-size: 1.5rem;
