--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,20 @@ h2 {
   margin: calc(var(--spacing-unit) * 2) 0 var(--spacing-unit);
 }
 
+h3 {
+  font-size: 1.5rem;
+  font-weight: 600;
+  line-height: 1.3;
+  margin: calc(var(--spacing-unit) * 2) 0 var(--spacing-unit);
+}
+
+h4 {
+  font-size: 1.2rem;
+  font-weight: 600;
+  line-height: 1.3;
+  margin: calc(var(--spacing-unit) * 2) 0 var(--spacing-unit);
+}
+
 p {
   font-size: 1.1rem;
   font-weight: 400;
