--- a/css/style.css
+++ b/css/style.css
@@ -143,7 +143,7 @@ footer {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  gap: 64px;
+  gap: calc(var(--spacing-unit) * 2);
   padding: calc(var(--spacing-unit) * 2) 0;
   font-size: 0.9rem;
   color: var(--text-secondary);
@@ -358,13 +358,13 @@ input {
 
 .footer-links {
   text-align: right;
+  min-width: 120px;
 }
 
 .footer-links h4 {
-  color: var(--text-secondary);
-  margin: 0 0 16px 0;
-  font-size: inherit;
-  font-weight: 500;
+  margin: 0 0 var(--spacing-unit);
+  font-size: 0.9rem;
+  letter-spacing: 0.05em;
 }
 
 .footer-links ul {
@@ -374,6 +374,30 @@ input {
 }
 
 .footer-links ul li {
-  margin: 0;
-  padding: 4px 0;
+  margin: calc(var(--spacing-unit) * 0.5) 0;
+}
+
+@media screen and (max-width: 600px) {
+  footer {
+    flex-direction: column;
+    gap: calc(var(--spacing-unit) * 2);
+    text-align: center;
+  }
+
+  .footer-links {
+    text-align: center;
+    min-width: unset;
+    width: 100%;
+  }
+
+  .footer-links ul {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: var(--spacing-unit);
+  }
+
+  .footer-links ul li {
+    margin: 0;
+  }
 }
