--- a/css/style.css
+++ b/css/style.css
@@ -433,8 +433,13 @@ input {
   margin: calc(var(--spacing-unit) * 4) 0 4px;
 }
 
+.post-metadata {
+  font-size: 0.85rem;
+  color: var(--text-secondary);
+  letter-spacing: 0.02em;
+}
+
 .post-date {
-  /* font-size: 0.8rem; */
   color: var(--text-light);
 }
 
@@ -444,4 +449,20 @@ input {
 
 article img {
   max-width: 100%;
+}
+
+article h1 {
+  font-size: 2.5rem;
+}
+
+article h2 {
+  font-size: 2.1rem;
+}
+
+article h3 {
+  font-size: 1.8rem;
+}
+
+article h4 {
+  font-size: 1.5rem;
 }
