--- a/css/style.css
+++ b/css/style.css
@@ -466,3 +466,55 @@ article h3 {
 article h4 {
   font-size: 1.5rem;
 }
+
+.post-preview {
+  display: flex;
+  gap: calc(var(--spacing-unit) * 2);
+  margin: calc(var(--spacing-unit) * 4) 0;
+}
+
+.post-preview-content {
+  flex: 1;
+}
+
+.post-preview-image {
+  width: 100%;
+  border-radius: 4px;
+  object-fit: cover;
+  border: 1px solid var(--hr-color);
+  box-sizing: border-box;
+}
+
+@media screen and (min-width: 768px) {
+  .post-preview {
+    align-items: flex-start;
+  }
+
+  .post-preview-image-container {
+    width: 200px;
+    flex-shrink: 0;
+  }
+
+  .post-preview-image {
+    aspect-ratio: 1;
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .post-preview {
+    flex-direction: column;
+  }
+
+  .post-preview-image-container {
+    width: 100%;
+    aspect-ratio: 2;
+    overflow: hidden;
+  }
+
+  .post-preview-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+}
